--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,5 +1,11 @@
+body {
+  /* background-color: #17a2b8; */
+
+}
 .App {
   text-align: center;
+  background-color: #17a2b8;
+  height: 100vh;
 }
 
 .App-logo {
